--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,18 +4,25 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    {
-        "name": "Launch test function",
-        "type": "go",
-        "cwd": "${workspaceFolder}",
-        "request": "launch",
-        "mode": "test",
-        "program": "${workspaceFolder}",
-        "args": [
-            "lex",
-            "-test.run",
-            "TestScanReservedKeywords"
-        ]
-    }
+        {
+            "name": "Attach to Process",
+            "type": "go",
+            "request": "attach",
+            "mode": "local",
+            "processId": 0
+        },
+        {
+            "name": "Launch test function",
+            "type": "go",
+            "cwd": "${workspaceFolder}",
+            "request": "launch",
+            "mode": "test",
+            "program": "${workspaceFolder}",
+            "args": [
+                "-test.v",
+                "-test.run"
+            ],
+            "showLog": true
+        }
     ]
 }
